--- a/extern/httplib-cheat/CMakeLists.txt
+++ b/extern/httplib-cheat/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_library(httplib INTERFACE IMPORTED GLOBAL)
-target_include_directories(httplib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(httplib SYSTEM INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
