update test cmake configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 add_subdirectory(extern)
 add_subdirectory(src)
 
-if (XENON_ENABLE_TEST)
+#if (XENON_ENABLE_TEST)
     enable_testing()
     add_subdirectory(test)
-endif ()
+#endif ()
