--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,23 +1,40 @@
-enable_testing()
+add_library(Catch2_main OBJECT catch2_main.cpp)
+target_link_libraries(Catch2_main PUBLIC Catch2::Catch2)
+
+
+macro(create_test name source_files working_directory)
+    set(test_name "${name}_test")
+    add_executable(${test_name} ${source_files})
+    target_link_libraries(${test_name}
+            PRIVATE
+            Catch2_main xenon_core Catch2::Catch2
+            )
+    add_test("all_tests_in_${test_name}"
+            COMMAND "${test_name}"
+            WORKING_DIRECTORY "${working_directory}"
+            )
+endmacro()
+create_test(network network_test.cpp test_dump)
+create_test(hack_jthread hack_jthread_test.cpp test_dump)
+
 
 #add_executable(gui_test gui_test.cpp)
-add_executable(network_test network_test.cpp)
-add_executable(hack_jthread_test hack_jthread_test.cpp)
+#add_executable(network_test network_test.cpp)
+#add_executable(hack_jthread_test hack_jthread_test.cpp)
 
-find_package(Catch2 CONFIG REQUIRED)
-#target_link_libraries(gui_test PRIVATE Catch2::Catch2 gui)
-target_link_libraries(hack_jthread_test PRIVATE Catch2::Catch2 hack_jthread)
+#find_package(Catch2 CONFIG REQUIRED)
+#target_link_libraries(hack_jthread_test PRIVATE Catch2::Catch2 hack_jthread)
 
 
-find_package(GTest CONFIG REQUIRED)
+#find_package(GTest CONFIG REQUIRED)
 
-target_link_libraries(network_test PRIVATE Catch2::Catch2 network)
-add_test(NAME all_tests_in_gui_test
-        COMMAND gui_test
-        WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+#target_link_libraries(network_test PRIVATE Catch2::Catch2 network)
+#add_test(NAME all_tests_in_gui_test
+#        COMMAND gui_test
+#        WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
-add_test(all_tests_in_jthread_tests hack_jthread_test)
+#add_test(all_tests_in_jthread_tests hack_jthread_test)
 
-add_test(all_tests_in_network_test
-        COMMAND network_test
-        WORKING_DIRECTORY test_dump)
+#add_test(all_tests_in_network_test
+#        COMMAND network_test
+#        WORKING_DIRECTORY test_dump)
